Acerca de, Listo Settings se fue, cambio Strings

--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -12,17 +12,8 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:background="#333333"
+        android:background="@color/negro"
         tools:context="com.proyectofootball.">
-
-        <TextView
-            android:layout_width="1dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/empty"
-            android:id="@+id/textView"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -48,6 +39,35 @@
             android:textSize="30dp"/>
 
         <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/iv_logo_head"
+            android:src="@drawable/logo_head"
+            android:scaleX="1.5"
+            android:scaleY="1.5"
+            android:layout_above="@+id/textView2"
+            android:layout_centerHorizontal="true" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:rotation="-12"
+            android:src="@drawable/football_play_chalk"
+            android:layout_below="@+id/textView2" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/acerca_de_texto"
+            android:id="@+id/textView2"
+            android:textColor="@color/blanco"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"/>
+
+        <ImageView
             android:id="@+id/imagen_logo_titan"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -55,25 +75,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/iv_logo_head"
-            android:src="@drawable/logo_head"
-            android:layout_above="@+id/textView"
-            android:layout_centerHorizontal="true"
-            android:scaleX="1.5"
-            android:scaleY="1.5"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/acerca_de_texto"
-            android:id="@+id/textView2"
-            android:layout_below="@+id/textView"
-            android:textColor="@color/blanco"
-            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
 </FrameLayout>
