--- a/app/src/main/res/layout/activity_teams.xml
+++ b/app/src/main/res/layout/activity_teams.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/verde_logo_lfa"
-        android:id="@+id/main_toolbar">
+        android:id="@+id/main_toolbar2">
 
         <ImageView
             android:layout_width="wrap_content"
