--- a/app/src/main/res/layout/teams_row.xml
+++ b/app/src/main/res/layout/teams_row.xml
@@ -16,16 +16,16 @@
         <TableRow android:id="@+id/renglon_equipos">
 
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:id="@+id/logo_equipo"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/logo_equipo_row_equipos"
                 android:src="@drawable/logo_lfa_sin_texto"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp" />
 
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/empty_team_name"
@@ -38,13 +38,13 @@
                 android:textColor="@color/blanco" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/empty_number_value"
                 android:id="@+id/numero_ganados"
                 android:layout_gravity="center"
-                android:layout_marginRight="2dp"
+                android:layout_marginRight="1dp"
                 android:textSize="20dp"
                 android:textColor="@color/blanco" />
 
@@ -59,25 +59,22 @@
                 android:textColor="@color/blanco" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/empty_number_value"
                 android:id="@+id/numero_perdidos"
                 android:layout_gravity="center"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="2dp"
                 android:textSize="20dp"
                 android:textColor="@color/blanco" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/empty_number_value"
                 android:id="@+id/numero_empatados"
                 android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:textColor="@color/blanco" />
 
