Se agrega cambio para layout principal de calendario Se agrega set de información básica en detalles de equipo Se resuelve problema con el espacio doble de toolbar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/verde_logo_lfa</item>
         <item name="colorPrimaryDark">@color/verde_logo_lfa</item>
         <item name="colorAccent">@color/rojo_logo_lfa</item>
+        <item name="windowNoTitle">true</item>
 
     </style>
 
