--- a/app/src/main/res/layout/activity_calendario.xml
+++ b/app/src/main/res/layout/activity_calendario.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TeamsActivity">
+    tools:context=".CalendarioActivity">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -26,7 +27,7 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/teams_list"
+            android:id="@+id/calendar_list"
             android:layout_marginTop="?attr/actionBarSize">
 
         </android.support.v7.widget.RecyclerView>
@@ -40,6 +41,5 @@
             android:layout_gravity="start"
             android:layout_marginTop="?attr/actionBarSize"></ListView>
     </android.support.v4.widget.DrawerLayout>
-
 
 </RelativeLayout>
