--- a/app/src/main/res/layout/activity_detalle_equipos.xml
+++ b/app/src/main/res/layout/activity_detalle_equipos.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,33 +25,35 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/tv_equipo_en_toolbar"
-                android:layout_gravity="center_horizontal"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:textColor="@color/blanco"
-                app:layout_collapseMode="pin"
-                android:text="Mayas"/>
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Mayas"
+                android:textColor="@color/blanco"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_collapseMode="pin" />
+
+            <TextView
                 android:id="@+id/record_equipo_en_toolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="23dp"
+                android:text="(0 - 0)"
                 android:textColor="@color/blanco"
-                app:layout_collapseMode="pin"
-                android:text="(0 - 0)"/>
+                app:layout_collapseMode="pin" />
+
             <ImageView
+                android:id="@+id/logo_equipo_en_toolbar"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:fitsSystemWindows="true"
-                android:src="@drawable/logo_mayas_fondo_blanco"
-                android:id="@+id/logo_equipo_en_toolbar"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="45dp"
-                app:layout_collapseMode="parallax"
-                android:layout_gravity="center_horizontal"/>
+                android:fitsSystemWindows="true"
+                android:src="@drawable/logo_lfa_sin_texto"
+                app:layout_collapseMode="parallax" />
 
 
             <android.support.v7.widget.Toolbar
@@ -57,8 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-            </android.support.v7.widget.Toolbar>
+                app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -70,8 +73,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_email"
         app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        android:src="@android:drawable/ic_dialog_email" />
+        app:layout_anchorGravity="bottom|end" />
 
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".DetalleEquipos">
+
+        <ListView
+            android:id="@+id/lv_sliding_menu"
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:background="@color/verde_logo_lfa"
+            android:choiceMode="singleChoice"></ListView>
+    </android.support.v4.widget.DrawerLayout>
 </android.support.design.widget.CoordinatorLayout>
