--- a/app/src/main/res/layout/content_detalle_equipos.xml
+++ b/app/src/main/res/layout/content_detalle_equipos.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.proyectofootball.titanes.lfa.DetalleEquipos"
+    tools:context="com.proyectofootball.titanes.lfa.TeamsDetailActivity"
     tools:showIn="@layout/activity_detalle_equipos">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tab_selector_roster_calendario"
-            app:tabMode="fixed"
-            app:tabGravity="center">
-        </android.support.design.widget.TabLayout>
+            app:tabGravity="center"
+            app:tabMode="fixed"></android.support.design.widget.TabLayout>
+
         <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/pager_selector_roster_calendario">
-        </android.support.v4.view.ViewPager>
+            android:layout_above="@+id/tab_layout"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v4.view.ViewPager>
+
     </RelativeLayout>
+
 
 </android.support.v4.widget.NestedScrollView>
