--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -24,12 +25,27 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <RelativeLayout
+            android:id="@+id/relativeAdd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/blog_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="?attr/actionBarSize"
-            android:background="@color/blanco"></android.support.v7.widget.RecyclerView>
+            android:background="@color/blanco"
+            android:layout_above="@+id/adView"></android.support.v7.widget.RecyclerView>
+
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/test_ad_unit_id"></com.google.android.gms.ads.AdView>
+        </RelativeLayout>
 
         <ListView
             android:id="@+id/lv_sliding_menu"
@@ -39,6 +55,7 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:background="@color/verde_logo_lfa"
             android:choiceMode="singleChoice"></ListView>
+
 
     </android.support.v4.widget.DrawerLayout>
 
