--- a/app/src/main/res/layout/activity_news_text.xml
+++ b/app/src/main/res/layout/activity_news_text.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_news_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.proyectofootball.titanes.lfa.NewsDetailActivity">
+    tools:context="com.proyectofootball.titanes.lfa.NewsTextActivity">
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/adView">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
@@ -57,17 +59,22 @@
                 android:layout_height="1dp"
                 android:background="@color/rojo_logo_lfa"></RelativeLayout>
 
-            <TextView
-                android:id="@+id/post_text"
+            <WebView
+                android:id="@+id/web_view_news"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/blanco"
-                android:ellipsize="end"
-                android:paddingBottom="15dp"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:text="nota va aqui"
-                android:textColor="@color/negro" />
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
         </LinearLayout>
     </ScrollView>
+
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/test_ad_unit_id" />
 </RelativeLayout>
