--- a/app/src/main/res/layout/blog_row.xml
+++ b/app/src/main/res/layout/blog_row.xml
@@ -7,7 +7,8 @@
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:background="@color/blanco"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/card_news">
 
     <LinearLayout
         android:layout_width="match_parent"
