--- a/app/src/main/res/layout/row_calendar.xml
+++ b/app/src/main/res/layout/row_calendar.xml
@@ -1,97 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginTop="3dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="0dp"
+    android:layout_marginBottom="3dp"
     android:background="@color/blanco"
-    android:layout_height="wrap_content">
+    android:orientation="horizontal"
+    app:cardCornerRadius="0dp"
+    app:cardElevation="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/logo_equipo_visitante"
-            android:src="@drawable/logo_lfa_sin_texto"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:layout_column="0"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true" />
 
         <TableLayout
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignBottom="@+id/logo_equipo_visitante"
-            android:layout_toStartOf="@+id/logo_equipo_visitante"
-            android:layout_toEndOf="@+id/logo_equipo_local">
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
-
-                <TextView
-                    android:layout_width="wrap_content"
+            <TableRow>
+                <!-- Set the width to 0dp and set layout_weight=1! on both Views-->
+                <include
+                    layout="@layout/layout_calendar_local_team"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/local"
-                    android:id="@+id/tvEquipoLocal"
-                    android:textSize="15sp"
-                    android:textAlignment="gravity" />
+                    android:layout_weight="1" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <include
+                    layout="@layout/layout_calendar_visit_team"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/estatus_pendiente"
-                    android:id="@+id/tvEstatus"
-                    android:textStyle="italic"
-                    android:textSize="15sp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/visitante"
-                    android:id="@+id/tvEquipoVisitante"
-                    android:textSize="15sp" />
-
+                    android:layout_weight="1" />
             </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/sin_fecha"
-                    android:id="@+id/tvFechaPartido"
-                    android:gravity="center"
-                    android:textSize="18sp" />
-
-            </TableRow>
-
         </TableLayout>
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/logo_equipo_local"
-            android:src="@drawable/logo_lfa_sin_texto"
-            android:layout_marginLeft="5dp"
-            android:layout_column="11"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+        <include layout="@layout/layout_calendar_middle_resources" />
+
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
