--- a/app/src/main/res/layout/row_teams.xml
+++ b/app/src/main/res/layout/row_teams.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_marginTop="3dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
     android:background="@color/blanco"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="0dp">
 
     <TableLayout
         android:layout_width="match_parent"
